# algorithm_collection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
algorithm_collection/geometry/: __init__.py  arc_length.py  circumference.py
algorithm_collection/mathematics/: __init__.py  correlation_coefficient.py  discriminant.py  exponential_taylor_approximation.py  factorial.py  fibonacci_numberes_analytical.py  fibonacci_numbers.py  fibonacci_numbers_dp.py  fibonacci_numbers_matrix.py  fibonacci_numbers_optimized.py  fibonacci_numbers_space_optimized.py  gcd.py  iterative_logarithm.py  lcm.py  prime_factors.py  sieve_of_eratosthenes.py  sieve_of_eratosthenes_optimized.py  sieve_of_sundaram.py
algorithm_collection/search/: __init__.py  binary_search.py  exponential_search.py  fibonacci_search.py  interpolation_search.py  jump_search.py  linear_search.py  linear_search_with_sentinel.py
algorithm_collection/sort/: __init__.py  bogo_sort.py  brick_sort.py  bubble_sort.py  comb_sort.py  counting_sort.py  insertion_sort.py  iterative_merge_sort.py  merge_sort.py  quick_sort.py  selection_sort.py  shell_sort.py  sleep_sort.py  stooge_sort.py
data_structure_collection/: __init__.py  queue.py  stack.py
data_structure_collection/matrix/: __init__.py  product.py
distance_collection/: __init__.py  canberra_distance.py  cosine_distance.py  euclidean_distance.py
rdbms/: Cargo.toml
rdbms/src/: lib.rs
tests/data_structure_collection/: test_queue.py  test_stack.py
tests/distance_collection/: test_canberra.py  test_cosine_distance.py  (+1 more)
(+38 files in other folders)
