[tool.poetry]
name = "algorithm_collection_py"
version = "0.1.0"
description = ""
authors = ["Masanari Kimura <noconoco.lib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
